--- a/index.html
+++ b/index.html
@@ -4,95 +4,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="./assets/image/svg/header-logo.svg" type="image/x-icon">
-    <title>Nigalya-page</title>
+    <title> Nigalya</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
-    <header class="d-f lex align-item justify-content justify-item min-h-100 bg-img">
-        <div class="container">
-            <nav class="py-2 d-flex align-item nav-bar w-100">
-                <!-- <div class="container"> -->
-                <div class="d-flex align-item justify-content-between w-100">
-                    <a href="#"><img src="./assets/image/svg/header-logo.svg" alt="header-logo"></a>
-                    <ul id="name"
-                        class="d-flex mb-0 mx-auto align-item justify-content justify-content-between gap-39 nav-link">
-                        <li class="up"><a class="navbar font-family-primary text-small color-white" href="#">HOME</a>
+    <header class="bg-img">
+        <nav class="d-flex align-item nav-bar bg-dark-black">
+            <img class="d-lg-none" src="/assets/image/svg/header-logo.svg" alt="header-logo">
+
+            <label onclick="navbarbtn()" class="z-5 d-lg-none">
+                <span class="menu-lines " id="rotats"></span>
+                <span class="menu-lines " id="transparent"></span>
+                <span class="menu-lines " id="rotats2"></span>
+            </label>
+            <ul id="nav-name" class="list-unstyled nav-link d-flex">
+                <li class="pt-27 pl-23">
+                    <img class="logo" src="/assets/image/svg/header-logo.svg" alt="header-logo">
+
+                </li>
+                <li>
+                    <ul class="d-flex list-unstyled gap-39 pt-31 align-item">
+                        <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link" href="">HOME</a>
                         </li>
-                        <li class="up"><a class="navbar font-family-primary text-small color-white" href="#">ABOUT</a>
+                        <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link" href="">ABOUT</a>
                         </li>
-                        <li class="up"><a class="navbar font-family-primary text-small color-white" href="#">ROADMAP</a>
+                        <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                                href="">ROADMAP</a></li>
+                        <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link" href="">TEAM</a>
                         </li>
-                        <li class="up"><a class="navbar font-family-primary text-small color-white" href="#">TEAM</a>
-                        </li>
-                        <li class="up"><a class="navbar font-family-primary text-small color-white" href="#">FAQ</a>
-                        </li>
-                        <li class="d-lg-none">
-                            <ul class="list-unstyled d-flex gap-14 mb-0">
-                                <div class="circle d-flex justify-content align-item">
-                                    <a href="https://www.twitter.com/">
-                                        <li><img src="./assets/image/svg/twitter-svg.svg" alt="twitter-svg"></li>
-                                    </a>
-                                </div>
-                                <div class="circle d-flex justify-content align-item">
-                                    <a href="https://www.telegram.com/">
-                                        <li><img src="./assets/image/svg/telegram-svg.svg" alt="telegram-svg"></li>
-                                    </a>
-                                </div>
-                                <div class="circle d-flex justify-content align-item">
-                                    <a href="https://www.instagram.com/">
-                                        <li><img src="./assets/image/svg/instagram-svg.svg" alt="instagram-svg"></li>
-                                    </a>
-                                </div>
-                                <div class="circle d-flex justify-content align-item">
-                                    <a href="https://www.discord.com/">
-                                        <li><img src="./assets/image/svg/discord-svg.svg" alt="discord-svg"></li>
-                                    </a>
-                                </div>
-                            </ul>
+                        <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link" href="">FAQ</a>
                         </li>
                     </ul>
-                    <div class="d-flex justify-content-end">
-                        <div onclick="navbarbtn()" class="d-block d-lg-none cursor">
-                            <span class="menu-lines" id="rotates"></span>
-                            <span class="menu-lines" id="transparent"></span>
-                            <span class="menu-lines" id="rotates2"></span>
-                        </div>
-                    </div>
+                </li>
+                <li>
+                    <ul class="list-unstyled d-flex gap-20 pt-26">
+                        <li><img src="/assets/image/svg/twitter-svg.svg" alt="twitter-svg"></li>
+                        <li><img src="/assets/image/svg/telegram-svg.svg" alt="telegram-svg"></li>
+                        <li><img src="/assets/image/svg/instagram-svg.svg" alt="instagram-svg"></li>
+                        <li><img src="/assets/image/svg/discord-svg.svg" alt="discord-svg"></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class=" col-12 col-lg-6">
+                    <img class="header-img-1" src="/assets/image/png/header-img-1.png" alt="header-img-1">
                 </div>
-                <!-- </div> -->
-            </nav>
-            <div class="flex-grow d-flex align-item justify-content">
-                <!-- <div class="container w-100"> -->
-                <div class="col-12 col-6 mt-107 justify-content">
-                    <img src="./assets/image/png/header-img-1.png" alt="header-img-1" class="">
-                </div>
-                <div class="col-12 col-6 mt-133">
-                    <h3 class="head font-family-primary text-md color-white">Welcome to Nigalya</h3>
-                    <h1 class="heading font-family-primary text-2xl color-white max-w-561">Land of eternal NFT
-                        challengers
+                <div class=" col-12 col-lg-6 half-sec">
+                    <p class="font-family-primary fw-600 text-md lh-27 color-white pt-133">Welcome to Nigalya</p>
+                    <h1 class="font-family-primary fw-900 text-xl lh-109 color-white ">Land of eternal NFT challengers
                     </h1>
-                    <p class="para font-family-primary text-sm color-white">The first-choose-to earn on the
-                        blockchain</p>
-                    <div class="d-flex align-item gap-29">
-                        <button class="btn font-family-primary text-sm color-white">JOIN NOW</button>
-                        <div class="data font-family-primary color-white">Whitepaper</div>
+                    <p class="font-family-primary color-white text-sm fw-600 lh-22 pt-12">The first-choose-to earn on the
+                        blockchain </p>
+                    <div class="parent">
+                        <button class="font-family-primary btn-1 color-white fw-600 text-sm lh-22 ">JOIN NOW</button>
+                        <button class="font-family-primary btn-2 color-white fw-600 text-sm lh-22 ">Whitepaper</button>
                     </div>
                 </div>
-                <!-- </div> -->
+            </div>
+            <img class="layer" src="/assets/image/png/layer.png" alt="layer">
+        </div>
+    </header>
+    <section class="bg-img-2">
+        <div class=" grow">
+            <p class="font-family-primary fw-600 text-md lh-27 color-white text-center">Trailor</p>
+            <h2 class="font-family-primary fw-900 text-xl lh-109 color-white text-center">Coming soon...</h2>
+
+            <div class="bottom-text">
+                <p class="font-family-primary fw-600 text-lg lh-41 color-white mt-199 text-center">10:22:25:42</p>
+                <p class="font-family-primary fw-400 color-white text-sm lh-small text-center ">Time left</p>
             </div>
         </div>
-        <img src="./assets/image/png/layer.png" alt="layer" class="layer">
-    </header>
-    <section class="d-flex align-item justify-content justify-item pt-223 pb-74 bg-img-2">
-        <div class="container">
-            <p class="trailor font-family-primary text-md color-white">Trailor</p>
-            <h2 class="heading-2 font-family-primary text-2xl color-white">Coming soon...</h2>
-            <p class="time font-family-primary text-lg color-white mt-199">10:22:25:42</p>
-            <p class="data-2 font-family-primary text-small color-white">Time left</p>
-        </div>
-
     </section>
     <script src="./assets/js/app.js"></script>
 </body>
