--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
                     </li>
                     <li>
                         <ul class="d-flex list-unstyled gap-39 pt-31 align-item">
-                            <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">HOME</a>
                             </li>
-                            <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">ABOUT</a>
                             </li>
-                            <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">ROADMAP</a></li>
-                            <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">TEAM</a>
                             </li>
-                            <li><a class="font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
+                            <li><a class="text-decoration-none font-family-primary color-white text-sm fw-400 lh-19 navbar-link"
                                     href="#">FAQ</a>
                             </li>
                         </ul>
@@ -95,7 +95,7 @@
             </div>
         </div>
     </section>
-    <section class="d-flex align-items-center justify-content-center min-vh-100 bg-black-wash">
+    <section class="d-flex align-items-center justify-content-center min-vh-100 pt-77 pb-100 bg-black-wash">
         <div class="container overflow-x-hidden max-w-1140">
             <h2 class="font-family-primary fw-900 text-xl lh-109 text-white text-center">A Quick Hightlight</h2>
             <p class="font-family-primary fw-semibold text-small lh-18 text-center text-white mt-36">ON YOUR
@@ -118,6 +118,164 @@
                 </div>
                 <div class="grid-item grid-item-6">
                     <img class="w-100 max-w-607" src="./assets/image/svg/grid-img-6.svg" alt="grid-img-6">
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-54">
+                <p class="font-family-primary fw-semibold text-md lh-35 text-white text-center max-w-946">Nigalya offers
+                    a NFT collection with infinitely diverse very high standards elements around your Panda
+                    Hero: headwear, drone companions, wings, weaponized items, and more.</p>
+            </div>
+            <div class="d-flex justify-content-center">
+                <p class="font-family-primary fw-semibold text-md lh-35 text-white">Be part of the community now by
+                    choosing your avatar hosted on the IPFS.</p>
+            </div>
+        </div>
+    </section>
+    <!------- accordion ------->
+    <section
+        class="section-3 d-flex align-items-center justify-content-center position-relative bg-img-3 bg-black-wash flex-column">
+        <div class="container max-w-1140">
+            <div class="font-family-primary fw-900 text-xl lh-109 text-white mt-63">FAQs</div>
+            <div class="row">
+                <div class="col-12 col-lg-7">
+                    <div class="accordion mt-77" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                    aria-expanded="true" aria-controls="collapseOne">
+                                    Leo sed aliquam odio a dictumst est convallis eu hendrerit. Viverra cras.
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button collapsed font-family-primary fw-semibold text-small lh-19 text-white"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                    aria-expanded="false" aria-controls="collapseTwo">
+                                    Pellentesque mauris, est at magna. Vel curabitur amet sit id. Enim.
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white collapsed"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                    aria-expanded="false" aria-controls="collapseThree">
+                                    Sodales morbi ultrices ipsum posuere rhoncus augue habitasse tellus.
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white collapsed"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour"
+                                    aria-expanded="false" aria-controls="collapseFour">
+                                    Tortor felis scelerisque blandit ullamcorper. Habitant integer in aliquam.
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white collapsed"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive"
+                                    aria-expanded="false" aria-controls="collapseFive">
+                                    Aliquam orci, ut sodales morbi hac. Sagittis odio sit pharetra sit. Porta.
+                                </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white collapsed"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix"
+                                    aria-expanded="false" aria-controls="collapseSix">
+                                    Facilisi magna montes, adipiscing ornare gravida odio. Dapibus aliquam.
+                                </button>
+                            </h2>
+                            <div id="collapseSix" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button
+                                    class="accordion-button font-family-primary fw-semibold text-small lh-19 text-white collapsed"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven"
+                                    aria-expanded="false" aria-controls="collapseSeven">
+                                    Neque maecenas id at hendrerit. Accumsan cursus augue sed accumsan.
+                                </button>
+                            </h2>
+                            <div id="collapseSeven" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body font-family-primary fw-normal text-small lh-24 text-white">
+                                    Et nibh sit suspendisse ac. Ipsum enim quisque cursus ullamcorper. Ultrices erat
+                                    odio
+                                    urna urna nunc, suspendisse venenatis sagittis volutpat. Morbi sit nullam diam arcu.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                    <img class="w-100" src="./assets/image/png/faq-img.png" alt="faq-img">
                 </div>
             </div>
         </div>
