change in accordion

--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
                         </div>
                         <div class="line"></div>
                     </div>
+                    <div class="d-flex align-items-center gap-14 mt-82 mb-45">
+                        <img src="./assets/image/svg/twitter-svg.svg" alt="twitter-svg">
+                        <img src="./assets/image/svg/telegram-svg.svg" alt="telegram-svg">
+                        <img src="./assets/image/svg/instagram-svg.svg" alt="instagram-svg">
+                        <img src="./assets/image/svg/discord-svg.svg" alt="discord-svg">
+                    </div>
                 </div>
                 <div class="col-12 col-lg-5">
                     <img class="w-100" src="./assets/image/png/faq-img.png" alt="faq-img">
