--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
                     <img class="w-100" src="./assets/image/svg/grid-img-1.svg" alt="grid-img-1">
                 </div>
                 <div class="grid-item grid-item-2">
-                    <img class="w-100 max-w-163" src="./assets/image/svg/grid-img-2.svg" alt="grid-img-2">
+                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-2.svg" alt="grid-img-2">
                 </div>
                 <div class="grid-item grid-item-3">
-                    <img class="w-100 max-w-198" src="./assets/image/svg/grid-img-3.svg" alt="grid-img-3">
+                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-3.svg" alt="grid-img-3">
                 </div>
                 <div class="grid-item grid-item-4">
-                    <img class="w-100 max-w-206" src="./assets/image/svg/grid-img-4.svg" alt="grid-img-4">
+                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-4.svg" alt="grid-img-4">
                 </div>
                 <div class="grid-item grid-item-5">
-                    <img class="w-100 max-w-425" src="./assets/image/svg/grid-img-5.svg" alt="grid-img-5">
+                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-5.svg" alt="grid-img-5">
                 </div>
                 <div class="grid-item grid-item-6">
-                    <img class="w-100 max-w-607" src="./assets/image/svg/grid-img-6.svg" alt="grid-img-6">
+                    <img class="w-100 h-100" src="./assets/image/svg/grid-img-6.svg" alt="grid-img-6">
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-54">
